--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -15,12 +15,10 @@
   width: fit-content;
   transition: all 0.5;
   border: none;
-  // background-color: var(--btn-bg, transparent);
   color: var(--btn-text-color, var(--text-color, black));
   z-index: 0;
   border: 1px solid var(--btn-bg, transparent);
   @extend .btn, .has-spacing;
-  // @extend .btn, .is-small;
 }
 
 .btn.has-spacing {
@@ -32,7 +30,7 @@
 }
 
 .btn.is-animated {
-  transition: all 0.3s; //TODO:
+  transition: all 0.3s;:
 }
 
 .btn.text-only {
@@ -90,7 +88,7 @@
     left: 0;
     top: 0;
     z-index: -1;
-    transition: all 0.5s;
+    transition: transform 0.5s;
     transform-origin: left center;
     transform: scale(1, 1);
   }
