--- a/src/styles/layout/_blocks.scss
+++ b/src/styles/layout/_blocks.scss
@@ -3,7 +3,7 @@
 */
 .block {
   display: block;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -12,8 +12,7 @@
   width: fit-content;
 }
 
-.block.is-fullscreen {
-  width: 100%;
+.block.is-fullheight {
   height: 100%;
 }
 
