--- a/src/styles/elements/_heading.scss
+++ b/src/styles/elements/_heading.scss
@@ -1,7 +1,7 @@
 .heading {
   letter-spacing: 0.2rem;
   text-transform: uppercase;
-  white-space: wrap;
+  white-space: normal;
 }
 
 .heading.is-sub-header {
