--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 /// Base
 @import "./base/reset";
 @import "./base/typography";
+@import "./general";
 @import "./base/global";
 @import "./layout";
 
