--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -44,7 +44,7 @@
     display: grid;
     place-items: center;
   }
-  .slogan-section__img__wrapper {
+  .image__wrapper {
     position: absolute;
     top: 0;
     left: 0;
@@ -183,7 +183,7 @@
   // padding: 0 24px;
 }
 
-.gift-card-img__wrapper {
+.gift-card-image__wrapper {
   padding: 0 24px;
 }
 
