--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -11,6 +11,7 @@
   padding: 14px 28px;
   width: fit-content;
   transition: all 0.5;
+  cursor: pointer;
   border: none;
   color: var(--btn-text-color, var(--text-color, black));
   z-index: 0;
