--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -20,9 +20,14 @@
 }
 
 .section.has-pad {
-  padding: 50px 0;
+  // padding: 50px 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
   @media screen and (min-width: $tablet) {
-    padding: 80px 0;
+    // padding: 80px 0;
+
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
 
@@ -124,20 +129,11 @@
 
 .shop-the-look.container {
   @media screen and (min-width: $mobile + 1px) {
-    // padding-left: 90px;
-    // padding-right: 90px;
     max-width: 1260px;
     margin: 0 auto;
-    .shop-the-look__footer {
-      // margin-top: 40px;
-    }
 
     .shop-the-look__item {
       width: 100%;
-      height: 600px;
-      .shop-the-look__img {
-        padding: 24px 0;
-      }
     }
   }
   @media screen and (min-width: $tablet + 1px) {
@@ -146,12 +142,7 @@
     grid-gap: 4rem;
     align-items: center;
     .shop-the-look__item {
-      height: 513px;
       margin-left: auto;
-      // padding: 0 30px;
-      .shop-the-look__img {
-        padding: 12.5% 0;
-      }
     }
   }
 }
@@ -174,23 +165,10 @@
 }
 
 .shop-the-look__item {
-  height: 400px;
-  width: fit-content;
-  // margin: 0 auto;
-  // padding: 0 24px;
+  width: 453px;
+  margin: 0 auto;
+  max-width: 100%;
 }
-
-.shop-the-look__img {
-  width: fit-content;
-  img {
-    max-width: calc(100vw - 48px);
-  }
-}
-
-.shop-the-look__footer {
-  // padding: 0 24px;
-}
-
 .gift-card-image__wrapper {
   padding: 0 24px;
 }
