--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -21,4 +21,8 @@ body {
   --navsubitem-space: 14px;
   --sidebar-header-height: 60px;
   --sidebar-footer-height: 40px;
+  --header-text-color: white;
+  --header-vertical-padding: 15px;
+  --header-horizontail-padding: 18px;
+  --border-color: rgba(48, 48, 48, 0.5);
 }
