--- a/src/styles/components/_slides.scss
+++ b/src/styles/components/_slides.scss
@@ -5,6 +5,7 @@ body {
 .slideshow__container {
   display: flex;
   overflow: auto;
+  position: relative;
 }
 
 .slideshow__container.has-blur-effect {
@@ -92,6 +93,48 @@ body {
   padding: 0 24px;
   @media screen and (min-width: $tablet) {
     padding: 0 70px;
+  }
+}
+
+.slide__nav {
+  position: absolute;
+  width: fit-content;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  z-index: 1;
+  .slide__navitem {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 1px solid white;
+    position: relative;
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-color: white;
+      opacity: 0;
+      transition: opacity 0.5s;
+    }
+  }
+
+  .slide__navitem + .slide__navitem {
+    margin-left: 1em;
+  }
+
+  .slide__navitem.is-selected::after {
+    opacity: 1;
+  }
+}
+
+.slide__nav.hero-nav {
+  padding: 30px;
+  left: 0;
+  @media screen and (min-width: $mobile + 1px) {
+    padding: 30px 70px;
   }
 }
 
