--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 /// Không viết vào đây
 /// Thiếu structure gì cứ tự bổ sung
 @import "./utils";
-
+// @import "~swiper/swiper.scss";
 /// Base
 @import "./base/reset";
 @import "./base/typography";
